# Telemetry-Subsystem

./: .gitignore  README.md
backup/: gs.py  hardware.py  range_test.ods  range_test.tsv  vehicle.py  vgs.py
interface/: Makefile
interface/include/: config.hpp
interface/src/: main-old.cpp  main.cpp
server/: Message.java  README.md  hardware.py  make.bat  send.py  server.py
server/__pycache__/: hardware.cpython-38.pyc.139665766756576  hardware.cpython-38.pyc.139889798865120  hardware.cpython-38.pyc.140163599061216  hardware.cpython-38.pyc.140204524163472  hardware.cpython-38.pyc.140595322999008  hardware.cpython-38.pyc.140668875297344
test-data/: CMakeLists.txt  README.md  fc.csv  main.cpp  s_data.csv
test-telem/: meson.build  telemsim.c
visualizer/: CMakeLists.txt  README.md
visualizer/assets/models/: flame.dae  ground.blend  ground.dae  ground2.dae  skybox.blend  skybox.blend1  skybox.dae  suzanne.dae  test_cube.blend  test_cube.blend1  test_cube.dae  tree.blend  tree.dae  vehicle.blend  vehicle.blend1  vehicle.dae
visualizer/assets/shaders/: flat_f.glsl  flat_v.glsl  path_f.glsl  path_v.glsl  screen_f.glsl  screen_v.glsl  test_f.glsl  test_v.glsl
visualizer/assets/textures/: skybox.xcf
visualizer/examples/: README.md
visualizer/examples/src/: main.cpp
visualizer/include/: App.hpp  BBox.hpp  Camera.hpp  Clock.hpp  Data.hpp  Group.hpp  Keyboard.hpp  Material.hpp  Mesh.hpp  ModelLoader.hpp  Object.hpp  Scene.hpp  Screen.hpp  Shader.hpp  TexCache.hpp  Texture.hpp  Util.hpp  client.hpp  gl.h  gl.hpp
visualizer/src/: App.cpp  BBox.cpp  Camera.cpp  Clock.cpp  Data.cpp  Group.cpp  Keyboard.cpp  Material.cpp  Mesh.cpp  ModelLoader.cpp  Object.cpp  Scene.cpp  Screen.cpp  Shader.cpp  TexCache.cpp  Texture.cpp  Util.cpp  client.cpp  main.cpp
